Added practice-server with prisma

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DJ-Turntable",
+  "name": "dj-turntable",
   "version": "1.0.0",
   "description": "Inspired by GraphQL Meetup #16 in Berlin https://www.youtube.com/watch?v=92aiK1sAerU&amp;list=UUptAHlN1gdwD89tFM3ENb6w",
   "main": "index.js",
